guestbook/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook
